# BoostyMilker

./: .gitignore  MANIFEST.in  README.md  boosty-milker.nuspec  boosty-milker.rb  pyproject.toml  requirements.txt
.github/workflows/: release.yml
boosty_milker/: main.py
chocolatey/: boosty-milker.nuspec
chocolatey/tools/: chocolateyinstall.ps1
package/DEBIAN/: control
scripts/: manager.py
