[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "boosty-milker"
version = "1.0.0"
description = "CLI tool to download photos from Boosty.to"
authors = [{ name = "F3T1W", email = "f3t1w@icloud.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.8.0",
    "tqdm>=4.65.0",
    "colorama>=0.4.6"
]

[project.scripts]
boosty-milker = "src.main:main"
